--- a/app/public/home.html
+++ b/app/public/home.html
@@ -1,30 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<html>
+
 <head>
-  <meta charset="UTF-8">
-  <!-- materialize -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
-  <!-- materialize icons -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!--Let browser know website is optimized for mobile-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
-  <title>Friend Finder</title>
+	<meta charset="UTF-8">
+	<title>ViVi FriendFinder</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<!-- Latest compiled and minified CSS & JS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+	<script src="https://code.jquery.com/jquery.js"></script>
+
+	<!-- Font Awesome Glyphicons -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+
 </head>
+
 <body>
-  <div class='container'>
-    <div class='card-panel yellow darken-1 col s12'>
-      <section class='center-align'>
-      <h1><i class="medium material-icons">person_pin</i> Friend Finder</h1>
-      <h4>.</h4><br>
-      <a href='/survey' class="waves-effect waves-light btn cyan lighten-1"><i class="material-icons left">comment</i>Take Survey</a>
-      </section>
-    </div>
-  </div>
+	<nav class="navbar navbar-lg navbar-inverse navbar-fixed-top">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+				<a class="navbar-brand" href="http://www.vivi.guru"><span class="byname byname-lg"> by Vincent Visconti</span><img class="logo logo-lg" src="assets/images/ViVi_Web_logo_03.svg" alt="Logo"></a>
+			</div>
+		</div>
+	</nav>
+
+	<div class="container">
+
+		<div class="jumbotron text-center">
+			<img src="/assets/images/friendfinder.png" id="ff-logo">
+			<hr>
+			<h2>Welcome to Friend Finder!</h2> 
+			<h2> Answer a few basic personality questions.</h2>
+			<h2>Then find the friend with the greatest compatibility!</h2>
+			<br>
+
+			<div>
+				<a href="/survey"><button type="button" class="btn btn-lg btn-primary"><h4><span class="glyphicon glyphicon-list-alt"></span> Go to Survey</h4></button></a>
+			</div>
+			<div class="api">
+				<a href="/api/friends">API Friends List</a>
+			</div>
+
+		</div>
+	</div>
+
+	<footer class="footer">
+		<div class="container">
+			<div class="text-muted text-center copyright">
+				&copy; Copyright 2016-2017 Vincent Visconti
+			</div>
+	</footer>
+
+	<script src="assets/js/header.js"></script>
 
 </body>
+
 </html>
