--- a/app/public/home.html
+++ b/app/public/home.html
@@ -24,6 +24,9 @@
       <a href='/survey' class="waves-effect waves-light btn cyan lighten-1"><i class="material-icons left">comment</i>Take Survey</a>
       </section>
     </div>
+    <div class='col s4'>
+      <p><a href='/api/friends'>API Friends List</a> | <a href='https://github.com/StefanieDing/friend-finder' target= '_blank'>GitHub Repo</a></p>
+    </div>
   </div>
 
 </body>
