--- a/app/public/home.html
+++ b/app/public/home.html
@@ -1,33 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<html>
 <head>
-  <meta charset="UTF-8">
-  <!-- materialize -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
-  <!-- materialize icons -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!--Let browser know website is optimized for mobile-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
-  <title>Friend Finder</title>
+	<meta charset="UTF-8">
+	<title>FriendFinder</title>
+
+	<!-- Latest compiled and minified CSS & JS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+	<!-- Font Awesome Glyphicons -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+	<!-- Chosen -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
+
+
 </head>
 <body>
-  <div class='container'>
-    <div class='card-panel yellow darken-1 col s12'>
-      <section class='center-align'>
-      <h1><i class="medium material-icons">person_pin</i> Friend Finder</h1>
-      <h4>Answer a few questions... Meet your new best friend.</h4><br>
-      <a href='/survey' class="waves-effect waves-light btn cyan lighten-1"><i class="material-icons left">comment</i>Take Survey</a>
-      </section>
-    </div>
-    <div class='col s4'>
-      <p><a href='/api/friends'>API Friends List</a> | <a href='https://github.com/StefanieDing/friend-finder' target= '_blank'>GitHub Repo</a></p>
-    </div>
-  </div>
+	<div>
+		<div class="container">
+
+		<div class="jumbotron">
+			<padding-top
+			<h1 class=""><i class="glyphicon glyphicon-heart" aria-hidden="true"></i> Find a Date</h1>
+					<hr>
+					<h2 class="">Answer a few basic questions. </h2>
+					<h2 class="">Let's see who you are matched with!</h2>
+					<br>
+
+					<div class="">
+						<a href="/survey"><button type="button" class="btn btn-lg btn-primary"><h4><span class="glyphicon glyphicon-list-alt"></span> Go to Questionnaire</h4></button></a>	
+					</div>
+
+				</div>
+
+	    <footer class="footer">
+	    <div class="container">
+		        <p><a href="/api/friends">API Friends List</a> | <a href="http://git@github.com:lvanok/FriendFinder.git">GitHub Repo</a></p>
+	      </div>
+	    </footer>
+
+	</div>
 
 </body>
 </html>
