--- a/app/public/home.html
+++ b/app/public/home.html
@@ -21,7 +21,7 @@
 
 		<div class="jumbotron">
 			<padding-top
-			<h1 class=""><i class="glyphicon glyphicon-heart" aria-hidden="true"></i> Find a Date</h1>
+			<h1 class="">Find a Date</h1>
 					<hr>
 					<h2 class="">Answer a few basic questions. </h2>
 					<h2 class="">Let's see who you are matched with!</h2>
@@ -34,9 +34,6 @@
 				</div>
 
 	    <footer class="footer">
-	    <div class="container">
-		        <p><a href="/api/friends">API Friends List</a> | <a href="http://git@github.com:lvanok/FriendFinder.git">GitHub Repo</a></p>
-	      </div>
 	    </footer>
 
 	</div>
