--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -29,7 +29,7 @@
                 <input id="photo" type="text" class="validate" required>
                 <label class='active' for="name">Link to Photo Image (required)</label>
                 <h5><strong>Question 1</strong></h5>
-                <p>I see myself as extroverted, enthusiastic.</p>
+                <p>I see myself as very enthusastic about life.</p>
                 <select data-placeholder="" class="browser-default" id="q1">
                     <option value="">Choose an option</option>
                     <option value="1">1 (Strongly Disagree)</option>
@@ -39,7 +39,7 @@
                     <option value="5">5 (Strongly Agree)</option>
                 </select>
                 <h5><strong>Question 2</strong></h5>
-                <p>I see myself as critical, quarrelsome.</p>
+                <p>I see myself as critical, and love to start arguments.</p>
                 <select data-placeholder="" class="browser-default" id="q2">
                     <option value="">Choose an option</option>
                     <option value="1">1 (Strongly Disagree)</option>
@@ -49,7 +49,7 @@
                     <option value="5">5 (Strongly Agree)</option>
                 </select>
                 <h5><strong>Question 3</strong></h5>
-                <p>I see myself as dependable, self-disciplined.</p>
+                <p>I am a disciplined, self-starter.</p>
                 <select data-placeholder="" class="browser-default" id="q3">
                     <option value="">Choose an option</option>
                     <option value="1">1 (Strongly Disagree)</option>
@@ -59,7 +59,7 @@
                     <option value="5">5 (Strongly Agree)</option>
                 </select>
                 <h5><strong>Question 4</strong></h5>
-                <p>I see myself as anxious, easily upset.</p>
+                <p>I get very anxious in tough situations.</p>
                 <select data-placeholder="" class="browser-default" id="q4">
                     <option value="">Choose an option</option>
                     <option value="1">1 (Strongly Disagree)</option>
@@ -69,7 +69,7 @@
                     <option value="5">5 (Strongly Agree)</option>
                 </select>
                 <h5><strong>Question 5</strong></h5>
-                <p>I see myself as open to new experiences.</p>
+                <p>I am always open to new experiences.</p>
                 <select data-placeholder="" class="browser-default" id="q5">
                     <option value="">Choose an option</option>
                     <option value="1">1 (Strongly Disagree)</option>
@@ -79,7 +79,7 @@
                     <option value="5">5 (Strongly Agree)</option>
                 </select>
                 <h5><strong>Question 6</strong></h5>
-                <p>I see myself as reserved, quiet</p>
+                <p>I am very quiet</p>
                 <select data-placeholder="" class="browser-default" id="q6">
                     <option value="">Choose an Option</option>
                     <option value="1">1 (Strongly Disagree)</option>
@@ -89,7 +89,7 @@
                     <option value="5">5 (Strongly Agree)</option>
                 </select>
                 <h5><strong>Question 7</strong></h5>
-                <p>I see myself as sympathetic.</p>
+                <p>I am sympathetic to other people's needs.</p>
                 <select data-placeholder="" class="browser-default" id="q7">
                     <option value="">Choose an option</option>
                     <option value="1">1 (Strongly Disagree)</option>
@@ -99,7 +99,7 @@
                     <option value="5">5 (Strongly Agree)</option>
                 </select>
                 <h5><strong>Question 8</strong></h5>
-                <p>I see myself as disorganized.</p>
+                <p>I get disorganized very easily.</p>
                 <select data-placeholder="" class="browser-default" id="q8">
                     <option value="">Choose an option</option>
                     <option value="1">1 (Strongly Disagree)</option>
@@ -109,7 +109,7 @@
                     <option value="5">5 (Strongly Agree)</option>
                 </select>
                 <h5><strong>Question 9</strong></h5>
-                <p>I see myself as calm, emotionally stable.</p>
+                <p>I am very calm and emotionally stable.</p>
                 <select data-placeholder="" class="browser-default" id="q9">
                     <option value="">Choose an option</option>
                     <option value="1">1 (Strongly Disagree)</option>
@@ -119,7 +119,7 @@
                     <option value="5">5 (Strongly Agree)</option>
                 </select>
                 <h5><strong>Question 10</strong></h5>
-                <p>I see myself as practical, conventional.</p>
+                <p>I like to think practically.</p>
                 <select data-placeholder="" class="browser-default" id="q10">
                     <option value="">Choose an option</option>
                     <option value="1">1 (Strongly Disagree)</option>
