--- a/app/public/home.html
+++ b/app/public/home.html
@@ -21,7 +21,6 @@
 	<!-- Compiled and minified Materialize JavaScript -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
           
-	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -38,8 +37,7 @@
 						<h2>Answer a few basic questions.</h2>
 						<h2>Find the friend with the greatest compatibility!</h2>
 						<a href="/survey">
-							<button class="btn waves-effect waves-light" type="submit" name="action">Go to Survey
-								<i class="material-icons right">send</i>
+							<button type="submit" name="action">Go to Survey
 							</button>
 						</a>
 					</div>
