--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Friend Finder Pro</title>
+	<title>Friend Finder/title>
 
 	<!-- Link to the jQuery Library -->
   	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
@@ -40,17 +40,15 @@
 
 						<div class="input-field col s6">
 							<h5>Name (Required)</h5>
-							<i class="material-icons prefix">account_circle</i>
 							<input type="text" class="validate" placeholder="Your Name Here" id="userName">
 						</div>
 
 						<div class="input-field col s6">
 							<h5>Link to Photo Image (Required)</h5>
-							<i class="material-icons prefix">picture_in_picture</i>
+		
 							<input type="text" class="validate" placeholder="Photo Link Here" id="userPhoto">
 						</div>
 
-						<!-- Survey Questions -->
 						<div class="input-field col s12">
 							<h3>Question 1</h3>
 							<h5>Your mind is always buzzing with unexplored ideas and plans.</h5>
@@ -197,7 +195,7 @@
 	<!-- Modal Dialog Displaying Closest Friend Match -->
 	<div id="modal1" class="modal">
 		<div class="modal-content">
-			<h4>Closest Friend Match</h4>
+			<h4>Here is your closest match!</h4>
 			<div class="divider"></div>
 			<h5 id="userMatch"></h5>
 			<img id="userMatchImage" class="materialboxed" width="650" src="">
