--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -6,27 +6,12 @@
 	<!-- Link to the jQuery Library -->
   	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 
-  	<!-- Including Font Awesome Icons -->
-  	<script src="https://use.fontawesome.com/b38c8ed4c7.js"></script>
-
-	<!-- Link to reset stylesheet -->
-	<link rel="stylesheet" href="css/reset.css">
-
-	<!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-	<!-- Compiled and minified Materialize CSS -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
-
 	<!-- Compiled and minified Materialize JavaScript -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
           
-	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-	<header>
-	</header>
 
 	<main>
 		<div class="container">
@@ -198,10 +183,10 @@
 			<h4>Here is your closest match!</h4>
 			<div class="divider"></div>
 			<h5 id="userMatch"></h5>
-			<img id="userMatchImage" class="materialboxed" width="650" src="">
+			<img id="userMatchImage"width="650" src="">
 		</div>
 		<div class="modal-footer">
-			<a href="/survey" class="modal-action modal-close waves-effect waves-green btn-flat">Fill Again!</a>
+			<a href="/survey">Fill Again!</a>
 		</div>
 	</div>
 
