--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -1,21 +1,17 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Friend Finder/title>
-
-	<!-- Link to the jQuery Library -->
-  	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-		
-	<!-- Compiled and minified Materialize CSS -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
-
-	<!-- Compiled and minified Materialize JavaScript -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
-
-          
-</head>
-
 <body>
+	<header>
+		<nav>
+			<div class="nav-wrapper pink accent-2">
+				<i class="fa fa-address-book-o fa-5x" aria-hidden="true" id=logo-icon></i>
+				<a href="/" class="brand-logo" id="logo">Friend Finder</a>
+				<ul class="right hide-on-med-and-down" id="head-nav-links">
+					<li><a href="/survey">Survey</a></li>
+					<li><a href="/api/friends">API Friends List</a></li>
+					<li><a href="https://github.com/angrbrd/friend-finder">GitHub Repo</a></li>
+				</ul>
+			</div>
+		</nav>
+	</header>
 
 	<main>
 		<div class="container">
@@ -29,15 +25,17 @@
 
 						<div class="input-field col s6">
 							<h5>Name (Required)</h5>
+							<i class="material-icons prefix">account_circle</i>
 							<input type="text" class="validate" placeholder="Your Name Here" id="userName">
 						</div>
 
 						<div class="input-field col s6">
 							<h5>Link to Photo Image (Required)</h5>
-		
+							<i class="material-icons prefix">picture_in_picture</i>
 							<input type="text" class="validate" placeholder="Photo Link Here" id="userPhoto">
 						</div>
 
+						<!-- Survey Questions -->
 						<div class="input-field col s12">
 							<h3>Question 1</h3>
 							<h5>Your mind is always buzzing with unexplored ideas and plans.</h5>
@@ -180,17 +178,40 @@
 		</div>
 	</main>
 
+	<footer class="page-footer pink accent-2">
+		<div class="container">
+			<div class="row">
+				<div class="col l6 s12">
+					<h5 class="white-text">Friend Finder App</h5>
+					<p class="grey-text text-lighten-4">Thank you for taking the brief survey. Your responses will be used for training purposes only :-].</p>
+				</div>
+				<div class="col l4 offset-l2 s12">
+					<h5 class="white-text">Links</h5>
+					<ul>
+						<li><a class="grey-text text-lighten-3" href="/api/friends">API Friends List</a></li>
+						<li><a class="grey-text text-lighten-3" href="https://github.com/angrbrd/friend-finder">GitHub Repo</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div class="footer-copyright">
+			<div class="container">
+				© 2017 angrbrd entertainment
+				<a class="grey-text text-lighten-4 right" href="https://github.com/angrbrd">Reference Work</a>
+			</div>
+		</div>
+	</footer>
 
 	<!-- Modal Dialog Displaying Closest Friend Match -->
 	<div id="modal1" class="modal">
 		<div class="modal-content">
-			<h4>Here is your closest match!</h4>
+			<h4>Closest Friend Match</h4>
 			<div class="divider"></div>
 			<h5 id="userMatch"></h5>
-			<img id="userMatchImage"width="650" src="">
+			<img id="userMatchImage" class="materialboxed" width="650" src="">
 		</div>
 		<div class="modal-footer">
-			<a href="/survey">Fill Again!</a>
+			<a href="/survey" class="modal-action modal-close waves-effect waves-green btn-flat">Fill Again!</a>
 		</div>
 	</div>
 
