--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -177,8 +177,7 @@
 
 						<!-- Survey Submit Button -->
 						<div>
-							<button class="btn waves-effect waves-light" type="submit" name="action" id="submitButton">Submit Responses
-								<i class="material-icons right">send</i>
+							<button type="submit" name="action" id="submitButton">Submit Responses
 							</button>
 						</div>
 					</div>
@@ -190,7 +189,7 @@
 	<!-- Modal Dialog Displaying Closest Friend Match -->
 	<div id="modal1" class="modal">
 		<div class="modal-content">
-			<h4>Closest Friend Match</h4>
+			<h4>Here is your closest match!</h4>
 			<div class="divider"></div>
 			<h5 id="userMatch"></h5>
 			<img id="userMatchImage" class="materialboxed" width="650" src="">
