--- a/app/public/home.html
+++ b/app/public/home.html
@@ -3,7 +3,14 @@
 <head>
 	<title>Friend Finder</title>
 	
+  	<!-- Link to the jQuery Library -->
   	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+
+	<!-- Compiled and minified Materialize CSS -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+
+	<!-- Compiled and minified Materialize JavaScript -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
     
 </head>
 
