--- a/app/public/home.html
+++ b/app/public/home.html
@@ -33,6 +33,9 @@
 				</div>
 			</div>
 		</div>
+		<div class='col s4'>
+      <p><a href='/api/friends'>API Friends List</a> | <a href='https://github.com/SRidings/frienndfindertest' target= '_blank'>GitHub Repo</a></p>
+    </div>
 	</main>
 </body>
 </html>
