--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -176,6 +176,9 @@
 				</div>
 			</div>
 		</div>
+		<div class='col s4'>
+      <p><a href='/api/friends'>API Friends List</a> | <a href='https://github.com/SRidings/frienndfindertest' target= '_blank'>GitHub Repo</a></p>
+    </div>
 	</main>
 
 	<div id="modal1" class="modal">
