--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -40,7 +40,7 @@
 						<!-- Survey Questions -->
 						<div class="input-field col s12">
 							<h3>Question 1</h3>
-							<h5>Your mind is always buzzing with unexplored ideas and plans.</h5>
+							<h5>You consider yourself to be very ambitious in your life pursuits.</h5>
 							<select id="question1">
 								<option value="" disabled selected>Choose your option</option>
 								<option value="1">1 (Strongly Disagree)</option>
@@ -53,7 +53,7 @@
 
 						<div class="input-field col s12">
 							<h3>Question 2</h3>
-							<h5>Generally speaking, you rely more on your experience than your imagination.</h5>
+							<h5>You rarely pass judgement on others</h5>
 							<select id="question2">
 								<option value="" disabled selected>Choose your option</option>
 								<option value="1">1 (Strongly Disagree)</option>
@@ -66,7 +66,7 @@
 
 						<div class="input-field col s12">
 							<h3>Question 3</h3>
-							<h5>You find it easy to stay relaxed and focused even when there is some pressure.</h5>
+							<h5>Even under heavy pressure, you remain calm and relaxed.</h5>
 							<select id="question3">
 								<option value="" disabled selected>Choose your option</option>
 								<option value="1">1 (Strongly Disagree)</option>
@@ -79,7 +79,7 @@
 
 						<div class="input-field col s12">
 							<h3>Question 4</h3>
-							<h5>You rarely do something just out of sheer curiosity.</h5>
+							<h5>Honesty is important, even if it hurts someone's feelings.</h5>
 							<select id="question4">
 								<option value="" disabled selected>Choose your option</option>
 								<option value="1">1 (Strongly Disagree)</option>
@@ -92,7 +92,7 @@
 
 						<div class="input-field col s12">
 							<h3>Question 5</h3>
-							<h5>People can rarely upset you.</h5>
+							<h5>You are not easily upset by what people say about you.</h5>
 							<select id="question5">
 								<option value="" disabled selected>Choose your option</option>
 								<option value="1">1 (Strongly Disagree)</option>
@@ -105,7 +105,7 @@
 
 						<div class="input-field col s12">
 							<h3>Question 6</h3>
-							<h5>It is often difficult for you to relate to other people’s feelings.</h5>
+							<h5>You are able to relate to many different groups of people.</h5>
 							<select id="question6">
 								<option value="" disabled selected>Choose your option</option>
 								<option value="1">1 (Strongly Disagree)</option>
@@ -118,7 +118,7 @@
 
 						<div class="input-field col s12">
 							<h3>Question 7</h3>
-							<h5>In a discussion, truth should be more important than people’s sensitivities.</h5>
+							<h5>You are very curious and like to try new things.</h5>
 							<select id="question7">
 								<option value="" disabled selected>Choose your option</option>
 								<option value="1">1 (Strongly Disagree)</option>
@@ -131,7 +131,7 @@
 
 						<div class="input-field col s12">
 							<h3>Question 8</h3>
-							<h5>You rarely get carried away by fantasies and ideas.</h5>
+							<h5>You do not follow through with fantasies you have in life.</h5>
 							<select id="question8">
 								<option value="" disabled selected>Choose your option</option>
 								<option value="1">1 (Strongly Disagree)</option>
@@ -144,7 +144,7 @@
 
 						<div class="input-field col s12">
 							<h3>Question 9</h3>
-							<h5>You think that everyone’s views should be respected regardless of whether they are supported by facts or not.</h5>
+							<h5>Spending time with a group of close friends energizes you.</h5>
 							<select id="question9">
 								<option value="" disabled selected>Choose your option</option>
 								<option value="1">1 (Strongly Disagree)</option>
@@ -157,7 +157,7 @@
 
 						<div class="input-field col s12">
 							<h3>Question 10</h3>
-							<h5>You feel more energetic after spending time with a group of people.</h5>
+							<h5>You believe everyone's view should be respected, whether they are right or wrong.</h5>
 							<select id="question10">
 								<option value="" disabled selected>Choose your option</option>
 								<option value="1">1 (Strongly Disagree)</option>
@@ -176,6 +176,9 @@
 				</div>
 			</div>
 		</div>
+		<a class='dropdown-trigger btn' href='#' data-target='dropdown1'>Drop Me!</a>
+
+
 		<div class='col s4'>
       <p><a href='/api/friends'>API Friends List</a> | <a href='https://github.com/SRidings/frienndfindertest' target= '_blank'>GitHub Repo</a></p>
     </div>
