--- a/app/public/home.html
+++ b/app/public/home.html
@@ -23,8 +23,8 @@
 					<div id="mainpanel-content">
 						<h1>Friend Finder</h1>
 						<div class="divider"></div>
-						<h2>Answer a few basic questions.</h2>
-						<h2>Find the friend with the greatest compatibility!</h2>
+						<h2>Answer a few basic questions, and we will help you 
+						 find the friend with the greatest compatibility!</h2>
 						<a href="/survey">
 							<button type="submit" name="action">Go to Survey
 							</button>
